@@ -1,5 +1,11 @@
 # vim: set noexpandtab:
 
+2012-07-31 Steve
+	* Updated to SUSYTools-00-01-03
+	* Now using the SUSYTools cross section file
+	* Added HforToolD3PD output for alpgen W and Z samples
+	* Tagging SusyCommon-00-00-25
+
 2012-07-30 Steve
 	* Added flag for toggling tau selection and OR (not just OR as before)
 	* Modified photon flag to be similar in usage to tau flag
